--- a/packages/nouns-webapp/public/site.webmanifest.json
+++ b/packages/nouns-webapp/public/site.webmanifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Nouns DAO",
-  "short_name": "Nouns DAO",
+  "name": "Alps DAO",
+  "short_name": "Alps DAO",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
