Node Build Environment Update
Updated Netlify to run Node 20 with legacy openssl

--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,10 @@
   command = "yarn workspace @nouns/webapp build"
   publish = "packages/nouns-webapp/build"
 
+[build.environment]
+  NODE_VERSION=20.x
+  NODE_OPTIONS=--openssl-legacy-provider
+
 
 [[redirects]]
   from = "http://www.alps.wtf/*"
