Node Version is a string now

--- a/netlify.toml
+++ b/netlify.toml
@@ -22,7 +22,7 @@
   publish = "packages/nouns-webapp/build"
 
 [build.environment]
-  NODE_VERSION = 20
+  NODE_VERSION = "20"
   NODE_OPTIONS = "--openssl-legacy-provider"
 
 
