--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "typescript": "^4.3.2"
   },
   "resolutions": {
-    "**/ethers": "^5.6.8",
-    "**/@ethersproject/contracts": "^5.6.2"
+    "**/ethers": "5.6.8",
+    "@usedapp/core/ethers": "5.6.8",
+    "**/@ethersproject/contracts": "5.6.2",
+    "**/@ethersproject/providers": "5.6.8",
+    "**/@ethersproject/abstract-provider": "5.6.1",
+    "**/@ethersproject/abi": "5.6.3"
   },
   "workspaces": [
     "packages/*"
