--- a/packages/nouns-webapp/package.json
+++ b/packages/nouns-webapp/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/ethereum-provider": "^2.8.4",
+    "@walletconnect/modal": "^2.4.5",
     "@web3-react/abstract-connector": "6.0.7",
     "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
