--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "**/@ethersproject/contracts": "5.6.2",
     "**/@ethersproject/providers": "5.6.8",
     "**/@ethersproject/abstract-provider": "5.6.1",
-    "**/@ethersproject/abi": "5.6.3"
+    "**/@ethersproject/abi": "5.6.3",
+    "**/@walletconnect/keyvaluestorage": "1.0.2"
   },
   "workspaces": [
     "packages/*"
